1.finish jvm learning codes;
2.update the JVM.md